# meta-tictactoe-rust

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/application/: logging.rs
src/game/: controller.rs  mod.rs
src/game/handler/: init_handler.rs  mod.rs  result_handler.rs  round_handler.rs
src/game/logic/: board.rs  game_details.rs  mod.rs
src/network/: controller.rs  mod.rs  socket.rs
src/network/handler/: authenticate.rs
src/network/models/: board.rs  field_state.rs  game_details.rs  game_event.rs  game_log.rs  meta_board.rs  mod.rs  player.rs  position.rs
src/utils/: mod.rs  payload.rs
