[package]
name = "meta-tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = {  git = "https://github.com/TiamoP23/rust-socketio-event-ack", version = "0.4.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.107"}
rand = "0.8.5"
dotenv = "0.15.0"
prettytable-rs = "^0.10"
itertools = "0.11.0"
log = "0.4.20"
flexi_logger = "0.27.0"
anyhow = "1.0.75"